--- a/platformio.ini
+++ b/platformio.ini
@@ -20,5 +20,5 @@ board_upload.flash_size = 16MB
 board_build.flash_mode = dio
 lib_deps = 
 	lvgl@8.4.0
-	lewisxhe/SensorLib@^0.2.6
 	tzapu/WiFiManager@^2.0.17
+	fbiego/CST816S@^1.3.0
